# tortally

./: .env.sample  README.md  app.py  deploy.py  pyproject.toml  run.py  txt.txt
data/: damage_df.csv  damages_guide.txt
